@@ -6,7 +6,7 @@ CREATE TABLE items_applications_tmp (
 ) ENGINE=InnoDB;
 CREATE INDEX items_applications_1 on items_applications_tmp (applicationid,itemid);
 
-insert into items_applications_tmp select NULL,applicationid,applicationid from items_applications;
+insert into items_applications_tmp select NULL,applicationid,itemid from items_applications;
 drop table items_applications;
 alter table items_applications_tmp rename items_applications;
 
